templates/allow-jenkins-traffic-for-cicd-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-8080-50000
spec:
  ingress:
  - ports:
    - protocol: TCP
      port: 80 
  - ports:
    - protocol: TCP
      port: 443 
  - ports:
    - protocol: TCP
      port: 8080
  - ports:
    - protocol: TCP
      port: 50000
  - ports:
    - protocol: TCP
      port: 8443
  - ports:
    - protocol: TCP
      port: 8778
